Fixed tabalignment

--- a/admin/css/gdpr-cookie-consent-admin.css
+++ b/admin/css/gdpr-cookie-consent-admin.css
@@ -3199,10 +3199,10 @@ body.toplevel_page_gdpr-cookie-consent #wpcontent{
 	flex-grow: 0;
 	justify-content: space-evenly;
 	align-items: center;
+	min-width: 100%;
 }
 .gdpr-cookie-consent-admin-tab{
 	display: flex;
-	min-width: 229px;
 	height: 44px;
 	flex-direction: column;
 	align-items: center;
@@ -3211,6 +3211,7 @@ body.toplevel_page_gdpr-cookie-consent #wpcontent{
 	border: 1px solid var(--gray-200, #E4E4E7);
 	background: var(--gray-50, #FAFAFA);
 	cursor: pointer;
+	flex: 1;
 }
 .gdpr-cookie-consent-admin-tab .gdpr-cookie-consent-admin-tab-name{
 	color: var(--gray-700, #3F3F46);
@@ -3253,9 +3254,6 @@ body.toplevel_page_gdpr-cookie-consent #wpcontent{
 
 .gdpr-cookie-consent-admin-tabs-section.pro-is-activated{
 	padding-top: 20px;
-}
-.gdpr-cookie-consent-admin-tab{
-	min-width: 183px;
 }
 .gdpr-cookie-consent-admin-tab.active-tab{
 	border-bottom-color: #0059B3;
@@ -3323,13 +3321,6 @@ body.toplevel_page_gdpr-cookie-consent #wpcontent{
 	display: none;
 }
 
-/* Media query for MacBook Air */
-@media only screen and (max-device-width: 1440px) and (min-device-width: 1280px) {
-	/* Assuming MacBook Air screen size falls within these dimensions */
-	.gdpr-cookie-consent-admin-tab{
-		min-width: 167.7px;
-	}
-}
 #consentLogDataTabContainer .wplconsentlogspdf.column-wplconsentlogspdf div{
 	padding-left: 25%;
 }
